<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/registerFragment">

    <fragment
        android:id="@+id/nav_uni"
        android:name="com.pandapp.preferenceapp.ui.uni.UniversityFragment"
        android:label="@string/menu_uni"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_bolum" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_sehir" />
    </fragment>

    <fragment
        android:id="@+id/nav_bolum"
        android:name="com.pandapp.preferenceapp.ui.degree.DegreeFragment"
        android:label="@string/menu_degree"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_sehir"
        android:name="com.pandapp.preferenceapp.ui.city.CityFragment"
        android:label="@string/menu_city"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.pandapp.preferenceapp.ui.auth.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.pandapp.preferenceapp.ui.auth.register.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
</navigation>